<resources>
    <string name="app_name">Star Makers</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_dancer">Dancer</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_rs_500">Rs.</string>
    <string name="msg_donation_histor">Donation History</string>
    <string name="lbl_about">About :</string>
    <string name="lbl_movie_kantara">Movie : </string>
    <string name="lbl_91_71">+91 71********</string>
    <string name="msg_music_recordin">Music\nRecording</string>
    <string name="lbl_signup">Signup</string>
    <string name="lbl_editing_dubbing">Editing\nDubbing</string>
    <string name="lbl_shekar">Shekar</string>
    <string name="lbl_spent_amount">Spent Amount</string>
    <string name="lbl_netbanking">Netbanking</string>
    <string name="lbl_movies">Movies </string>
    <string name="lbl_share_amount">Share Amount</string>
    <string name="lbl_storyline">Storyline :</string>
    <string name="lbl_privacy_policy2">Privacy Policy</string>
    <string name="msg_new_campaign_fo">New campaign for funding raised..</string>
    <string name="msg_dorem_ipsum_dol">Dorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lbl_xxxx_in_inr">xxxx in INR</string>
    <string name="msg_above_the_budge">Above the budget amount</string>
    <string name="lbl_location">Location</string>
    <string name="msg_enter_total_num">Enter total number of Days</string>
    <string name="lbl_appx_budget">Appx. Budget :</string>
    <string name="lbl_anupama">Anupama</string>
    <string name="lbl_date">Date :</string>
    <string name="lbl_robert">Robert</string>
    <string name="lbl_requested">Requested</string>
    <string name="msg_share_amount_if">Share amount(if below budget)</string>
    <string name="lbl_9373636366">9373636366</string>
    <string name="lbl_history">History</string>
    <string name="lbl_video">Video</string>
    <string name="lbl_popular_search">Popular Search</string>
    <string name="lbl_request">Request</string>
    <string name="lbl_search_by_name">Search by name</string>
    <string name="lbl_waiting">Waiting</string>
    <string name="msg_participation_s">Participation Successful</string>
    <string name="lbl_chikkanna">Chikkanna</string>
    <string name="lbl_my_requests">My Requests</string>
    <string name="lbl_membership">Membership</string>
    <string name="lbl_pic_1">Image 1</string>
    <string name="msg_above_the_budge2">Above the budget amount \u2013 </string>
    <string name="lbl_venue">Venue :</string>
    <string name="msg_91_71">71********</string>
    <string name="lbl_rahul">Rahul</string>
    <string name="msg_request_sent_su">Request Sent Successfully</string>
    <string name="msg_credit_debit">Credit / Debit card</string>
    <string name="lbl_weight2">Weight :</string>
    <string name="lbl_nil">Nil</string>
    <string name="msg_total_number_of">Total number of Movies :</string>
    <string name="msg_donation_succes">Donation Successful</string>
    <string name="msg_house_location">House\nLocation</string>
    <string name="msg_below_the_budge">Below the budget amount</string>
    <string name="lbl_city">City</string>
    <string name="msg_please_enter_th">Please enter the 6 digit OTP Sent to</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_sudeep">Sudeep</string>
    <string name="lbl_mail_id">Mail ID -</string>
    <string name="lbl_500">\u20b9 500</string>
    <string name="lbl_studio_bookings">Studio
Bookings</string>
    <string name="lbl_kantara3">kANTARA</string>
    <string name="msg_movie_end_date">Movie End Date :</string>
    <string name="lbl_kantara2">KANTARA</string>
    <string name="lbl_spent_amount2">Spent amount \u2013</string>
    <string name="lbl_search_here">Search here</string>
    <string name="msg_in_1847_there">In 1847, there lived a king that had a great kingdom as well as a loving wife and child, but could not find peace. He sets out on a journey to discover true happiness and comes upon a stone in a forest occupied by Panjurli Daiva (Varaha Avathar), a deity that protects the villagers that reside in the forest.</string>
    <string name="lbl_book_artists">Book Artists</string>
    <string name="lbl_read">Read</string>
    <string name="msg_enter_donation">Enter Donation Amount</string>
    <string name="lbl_yash">Yash</string>
    <string name="msg_applying_for_ro">Applying for role</string>
    <string name="lbl_login2">Login </string>
    <string name="msg_registration_fe">Registration Fee</string>
    <string name="msg_how_to_place_o">How  to place order ?</string>
    <string name="msg_min_amount_20">Min. Amount \u20b9200</string>
    <string name="lbl_skip">Skip &gt;&gt;</string>
    <string name="msg_take_our_member">Take Our Membership and keep a step forward in achieving your dream carrier with us.</string>
    <string name="lbl_privacy_policy">Privacy policy</string>
    <string name="msg_releasing_date">Releasing Date :</string>
    <string name="msg_artist_membersh2">Artist Memberships</string>
    <string name="msg_only_membership">Only Membership owners can participate in the auditions.</string>
    <string name="msg_tap_on_screen">Tap on Screen &gt;&gt;</string>
    <string name="msg_donator_experie">Donator Experience Videos</string>
    <string name="lbl_share_app">Share App &amp; Earn</string>
    <string name="msg_artist_membersh">Artist Membership</string>
    <string name="lbl_ramamand_studio">Ramamand Studio</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="lbl_payment_details">Payment Details</string>
    <string name="msg_qecuries_gmail">qecuries@gmail.com</string>
    <string name="lbl_selection_list">Selection List</string>
    <string name="lbl_ramanand_studio">Ramanand Studio</string>
    <string name="lbl_booked">Booked</string>
    <string name="lbl_studio_booking">Studio Booking</string>
    <string name="lbl_add_profile">Add Profile</string>
    <string name="lbl_video_1">Video 1</string>
    <string name="lbl_video_2">Video 2</string>
    <string name="lbl_artists">Artists </string>
    <string name="lbl_position">Position :</string>
    <string name="msg_share_amount_if3">Share amount(If above budget)</string>
    <string name="msg_contact_number">Contact Number :</string>
    <string name="msg_share_amount_if2">Share amount(if below budget) \u2013 </string>
    <string name="msg_share_amount_if4">Share amount(If above budget) \u2013 </string>
    <string name="lbl_studios_booked">Studios Booked</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_enter_details">Enter Details</string>
    <string name="lbl_auditions">Auditions</string>
    <string name="lbl_studio_requests">Studio Requests</string>
    <string name="lbl_cost_24l">Cost :</string>
    <string name="lbl_through_sms">  through SMS.</string>
    <string name="msg_helpline_number2">Helpline Number -</string>
    <string name="msg_movie_rajakum">Movie : Rajakumara</string>
    <string name="lbl_booking_dates">Booking Dates</string>
    <string name="msg_frequently_aske">Frequently Asked Questions</string>
    <string name="lbl_cast">Cast</string>
    <string name="msg_registration_de">Registration Details</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_payment_page">Payment Page</string>
    <string name="msg_crowd_funding_z">Crowd Funding Zone</string>
    <string name="msg_how_to_take_me">How  to take membership ?</string>
    <string name="lbl_view_details">View Details</string>
    <string name="lbl_upload_video">Upload Video</string>
    <string name="lbl_weight_in_kg">Weight in KG</string>
    <string name="lbl_kgf_auditions">Apply For Audition</string>
    <string name="lbl_home">Home</string>
    <string name="msg_already_have_an">Already have an account ?</string>
    <string name="msg_participate_in">Participate in other Auditions</string>
    <string name="msg_membership_arti">Membership Artists </string>
    <string name="msg_required_addnl">Required addnl. Budget</string>
    <string name="lbl_2000">\u20b9 2000</string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consect        adipiscing elit.</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</string>
    <string name="lbl_dd_mm_yy">dd/mm/yy</string>
    <string name="msg_registration_su">Registration Successful</string>
    <string name="lbl_10am_12am">10AM -</string>
    <string name="msg_finance_overvie">Finance Overview</string>
    <string name="lbl_upendra">Upendra</string>
    <string name="msg_collected_budge2">Collected Budget amount \u2013 </string>
    <string name="lbl_age2">Age :</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="msg_studio_booking">Studio
Bookings</string>
    <string name="msg_enter_mobile_nu">Enter Mobile number</string>
    <string name="msg_required_addnl2">Required addnl. Budget \u2013 </string>
    <string name="lbl_go_home">Go home &gt;&gt;</string>
    <string name="lbl_darshan">Darshan</string>
    <string name="msg_collected_budge">Collected Budget amount :		</string>
    <string name="msg_gate_no_3_ba">Gate No. 3 , Bangalore Palace,
Bengaluru.5678943 </string>
    <string name="lbl_email_id">Email ID</string>
    <string name="msg_choose_payment">Choose Payment Method</string>
    <string name="lbl_height_in_cm">Height in CM</string>
    <string name="lbl_help_faqs">Help &amp; FAQs</string>
    <string name="lbl_requests">Requests</string>
    <string name="msg_check_the_selec">Check the selection results.</string>
    <string name="lbl_request_booking">Request Booking</string>
    <string name="msg_select_from_dat">Select From Date:</string>
    <string name="lbl_select_category">Select Category</string>
    <string name="lbl_weight">Weight</string>
    <string name="msg_your_location">Your location - Bengaluru 560068</string>
    <string name="msg_dancers_selecte">Dancers Selected</string>
    <string name="lbl_pincode">Pincode</string>
    <string name="lbl_activity">Activity</string>
    <string name="lbl_recent_searches">Recent Searches</string>
    <string name="msg_mail_id_qecur">Mail ID - </string>
    <string name="msg_donate_money_to">Donate money to upcoming movies</string>
    <string name="lbl_upi">UPI</string>
    <string name="lbl_time">Time :</string>
    <string name="msg_terms_condit">Terms &amp;  Conditions</string>
    <string name="msg_search_by_studi">Search by Studio name</string>
    <string name="msg_funding_demo_vi">Funding Demo Videos</string>
    <string name="lbl_dancer_actor">Dancer , Actor</string>
    <string name="lbl_genre_mystery">Genre : </string>
    <string name="lbl_introduction">Introduction</string>
    <string name="lbl_select_to_date">Select To Date:</string>
    <string name="lbl_height2">Height :</string>
    <string name="lbl_role">Role :</string>
    <string name="msg_available_amoun">Available Amount</string>
    <string name="msg_helpline_number">Helpline Number -</string>
    <string name="lbl_donate">Donate</string>
    <string name="msg_direct_studio_b">Direct Studio Bookings</string>
    <string name="lbl_genre">Genre :</string>
    <string name="msg_total_spent_amo">Total spent amount</string>
    <string name="msg_spent_amount">Spent amount :</string>
    <string name="msg_available_amoun2">Available amount(after sharing amount)</string>
    <string name="lbl_participate">Participate</string>
    <string name="lbl_26_05_2023">26/05/2023</string>
</resources>