<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="auditionsRowModel" type="com.starmakers.app.modules.auditions.data.model.AuditionsRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowrectangle106"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylewhite_9">
        <ImageView android:id="@+id/imageRectangle106"
            android:layout_height="@dimen/_178pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="@dimen/_117pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_5pxh}"
            imageRes="@{@drawable/img_rectangle106}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle106"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumndate"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_9pxh"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_weight="0.61" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowdate"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDate"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{auditionsRowModel.txtDate}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/lbl_date"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDateOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsRowModel.txtDateOne}"
                    style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_26_05_2023"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowtime"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{auditionsRowModel.txtTime}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/lbl_time"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTimeOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsRowModel.txtTimeOne}"
                    style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_10am_12am"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtVenue"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{auditionsRowModel.txtVenue}"
                style="@style/txtPoppinsregular14_1" tools:text="@string/lbl_venue"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_width="match_parent"
                android:text="@{auditionsRowModel.txtLanguage}"
                style="@style/txtPoppinsregular12_1" tools:text="@string/msg_gate_no_3_ba"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowposition"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPosition"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.39"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{auditionsRowModel.txtPosition}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/lbl_position"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDancerActor"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.61"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{auditionsRowModel.txtDancerActor}"
                    style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_dancer_actor"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnParticipate"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_participate"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_participate"/>
        </LinearLayout>
    </LinearLayout>
</layout>
