<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="auditionsOneVM" type="com.starmakers.app.modules.auditionsone.data.viewmodel.AuditionsOneVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearAuditionsOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        style="@style/groupStylewhite_A700">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout
                android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                style="@style/groupStylegray_802">
                <ImageView
                    android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFinanceOvervie"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginEnd="@dimen/_67pxh"
                    android:layout_marginStart="@dimen/_29pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_weight="0.9"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtFinanceOvervie}"
                    style="@style/txtPoppinssemibold24" tools:text="@string/msg_finance_overvie"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <LinearLayout android:id="@+id/linearRowrectangleten"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            style="@style/groupStylegray_52cornerRadius">
            <ImageView android:id="@+id/imageRectangleTen"
                android:layout_height="@dimen/_147pxh"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="@dimen/_117pxh"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_rectangle10_264x159}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle10_264x159"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnmoviekantara"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_weight="0.49"
                android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtMovieKantara"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtMovieKantara}"
                    style="@style/txtPoppinsmedium14_3" tools:text="@string/lbl_movie_kantara"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtGenreMystery"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtGenreMystery}"
                    style="@style/txtPoppinsmedium14_3" tools:text="@string/lbl_genre_mystery"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtStoryline"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtStoryline}"
                    style="@style/txtPoppinsmedium14_3" tools:text="@string/lbl_storyline"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAppxBudget"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtAppxBudget}"
                    style="@style/txtPoppinsmedium14_3" tools:text="@string/lbl_appx_budget"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtReleasingDate"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtReleasingDate}"
                    style="@style/txtPoppinsmedium14_3" tools:text="@string/msg_releasing_date"/>
            </LinearLayout>
        </LinearLayout>




        <ScrollView
            android:fillViewport="true"
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <FrameLayout
            android:id="@+id/frameStackspentamount"
            android:layout_height="@dimen/_696pxv"
            android:layout_width="match_parent">


            <LinearLayout
                android:background="@drawable/backgroundbudget"
                android:id="@+id/linearColumnspentamount"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                style="@style/groupStylewhite_11">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSpentAmount"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtSpentAmount}"
                    style="@style/txtPoppinsmedium16_2" tools:text="@string/lbl_spent_amount"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPrice}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_collected_budge"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPriceOne}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_spent_amount"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPriceTwo}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_required_addnl"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPriceThree}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_total_spent_amo"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSpentAmountOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtSpentAmountOne}"
                    style="@style/txtPoppinsmedium16_2" tools:text="@string/lbl_spent_amount"/>

                <TextView
                    android:id="@+id/txtPriceFour"
                    style="@style/txtPoppinsregular14_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPriceFour}"
                    tools:text="@string/msg_above_the_budge" />

                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceFive"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPriceFive}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_below_the_budge"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtShareAmount"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtShareAmount}"
                    style="@style/txtPoppinsmedium16_2" tools:text="@string/lbl_share_amount"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtShareamountif"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtShareamountif}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_share_amount_if"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtPriceSix"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPriceSix}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_share_amount_if3"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAvailableAmoun"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtAvailableAmoun}"
                    style="@style/txtPoppinsmedium16_2" tools:text="@string/msg_available_amoun"/>
                <TextView android:id="@+id/txtPriceSeven"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:text="@{auditionsOneVM.auditionsOneModel.txtPriceSeven}"
                    style="@style/txtPoppinsregular14_8" tools:text="@string/msg_available_amoun2"/>
            </LinearLayout>

        </FrameLayout>
        </ScrollView>
    </LinearLayout>

</layout>
